k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "interview-evaluations"
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 8080
  selector:
    app: "interview-evaluations"
